--- a/manuscript/page-3/body.html
+++ b/manuscript/page-3/body.html
@@ -6,9 +6,9 @@
 <div class="leaf flex">
     <div class="inner justify ">
         <div class="center">
-            <img src="https://raw.githubusercontent.com/kanishkrai/priyanka-gandhi/master/assets/images/snakes.png" width ="70%" />
+            <img src="https://raw.githubusercontent.com/kanishkrai/virat-kohli/master/assets/images/saggi.png" width ="70%" />
             <h1>SAGITTARIUS</h1>
-            <blockquote>Expressive, gregarious and versatile…</blockquote>
+            <blockquote>Honest, Blunt and Stubborn…</blockquote>
         </div>
     </div>
 </div>
