--- a/manuscript/page-4/body.html
+++ b/manuscript/page-4/body.html
@@ -6,9 +6,9 @@
 <div class="leaf flex">
     <div class="inner justify ">
         <div class="center">
-            <img src="https://raw.githubusercontent.com/kanishkrai/priyanka-gandhi/master/assets/images/priyankalagnachart.png" width="90%" />
-            <h4> Birth chart -  Priyanka Gandhi </h4>
-            <blockquote>Brings people together...</blockquote>
+            <img src="https://raw.githubusercontent.com/kanishkrai/virat-kohli/master/assets/images/birthchart.png" width="90%" />
+            <h4> Birth chart -  Virat Kohli </h4>
+            <blockquote>Ruthless Aggression Era...</blockquote>
         </div>
     </div>
 </div>
