Added further info

--- a/manuscript/page-1/body.html
+++ b/manuscript/page-1/body.html
@@ -7,7 +7,7 @@
 
         <img class="center flex vertical-pad" src="https://raw.githubusercontent.com/kanishkrai/donald-trump/master/assets/images/vk.png" width="100%" />
 
-        <img class="border" src="https://raw.githubusercontent.com/kanishkrai/virat-kohli/master/assets/images/viratkohli.jpg" width="50%">
+        <img class="border" src="https://raw.githubusercontent.com/kanishkrai/virat-kohli/master/assets/images/viratkohli2.png" width="50%">
 
         <h2 class=""> Virat Kohli </h2>
 
