--- a/manuscript/page-10/body.html
+++ b/manuscript/page-10/body.html
@@ -1,18 +1,15 @@
 <header class="tape flex">
-    <div class="chapter flex"> Politics </div>
-    <div class="chaptername"> General Elections 2019 </div>
+    <div class="chapter flex"> Cricket </div>
+    <div class="chaptername"> World Cup 2019 </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
-        <h2> General Elections 2019 </h2>
+        <h2> World Cup 2019 </h2>
         <p>
-            The debacle of the Indian National Congress is ubiquitously known. The people now have ambiguity mindset as to the existence of the Congress in India under the leadership of Rahul Gandhi. The recent jeopardy in Uttar Pradesh, Goa, Manipur and Uttarakhand denotes complete inefficient leadership.
+            Cricket World Cup would be held in England from 30 May 2019 to 15 July 2017. During this period Virat will be undergoing the period of Rahu/Mercury/Moon followed by Rahu/Mercury/Mars. In Virat's horoscope, Rahu is well placed in friendly Sign in 3rd House of courage, efforts, courageous. Rahu's dispositor Saturn is also well placed in Sagittarius in Ascendant and is aspecting 3rd House giving it additional strength.
         </p>
         <p>
-           The party belongs to Cancer Ascendant and Aries Moon sign. The Lagna Lord Jupiter is posited in the 11<sup>th</sup> house along with Venus that gave unprecedented achievement under the leadership of Indira Gandhi, Rajiv Gandhi and Sonia Gandhi during last 50 years.
-</p>
-           <p>
-However, the success of the party has been sarcastically bleak under the leadership Rahul Gandhi. Even, the people have left the hope of Congress coming back again.
+           Rahu from 3rd House is aspecting 9th House of fortune, luck, travels etc. Saturn is 3rd Lord of courage, efforts and 2nd Lord of prosperity, it is aspecting 7th House of gain of position, foreign relations and 10th House of career, profession. 
         </p>
     </div>
 </div>
