--- a/manuscript/page-11/body.html
+++ b/manuscript/page-11/body.html
@@ -1,18 +1,14 @@
 <header class="tape flex">
-<div class="chaptername right"> Politics </div>
-    <div class="chapter flex right"> Elections 2019 </div>
+<div class="chaptername right"> World </div>
+    <div class="chapter flex right"> Cup 2019 </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
         <p>
-            From the birth chart of India, the current dasha cycle of Moon. Currently, the Congress party is under the influence of Rahu Mahadasha and Antardasha of Saturn that does not promise a spectacular output by May 2018 since the planet Saturn is debilitated in the Lagna chart.
-            </p>
-            <p>
-It will experience the malefic influence of the Antardasha of Mercury from May 2018 to November 2020 that even does not denote coming back to power.
-        </p>
-        <p>
-            Now, what is in store for Rahul Gandhi in the coming parliament election.
-Rahul belongs to Taurus ascendant and Scorpio Moon sign. Currently, he is under the Mahadasha of Moon till October 2017 which is not in favour of Rahul Gandhi. The Mahadasha of Mars will commence from October 2017 till October 2024 that does not promise the throne for the Rahul as Mars is in inimical house and severely afflicted by Malefic Rahu and Saturn.
-        </p>
+            Mercury is the 10th Lord placed in 11th House of gains, rise, aspecting 5th House of positivity, conjunct with the 9th Lord of fortune, luck.
+</p>
+           <p>
+Moon, is 8th Lord of suddeness, placed in 10th House conjunct with 11th Lord of gains, and 6th Lord of competition, Venus. Mars is 5th Lord of positivity, placed in 4th House and adding strength to the 10th House by aspect. It is also the Lord of displacement, losses, foreign travels. Transit-wise this period does not look to be conducive for Virat Kohli, thus the next World Cup could be a mixed bag for India and Virat Kohli.
+
     </div>
 </div>
