--- a/manuscript/page-13/body.html
+++ b/manuscript/page-13/body.html
@@ -1,16 +1,14 @@
 <header class="tape flex">
-    <div class="chaptername right"> India</div>
-    <div class="chapter flex right"> Future </div>
+    <div class="chaptername right"> Relationship</div>
+    <div class="chapter flex right"> Anushka </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
-        <h2> Brand Gandhi & Future</h2>
         <p>
-        The political fighting with Narendra Modi could be an uphill task for Priyanka Gandhi. Furthermore, the current premier Narendra Modi has been running through the Mahadasha of Moon which is showering power, position, authority and opportunities for global leadership. 
-        It will be an extremely cumbersome task for Priyanka Gandhi to jeopardize the position of Narendra Modi during upcoming election in 2019 since Mr. Modi will have the major period of Moon and upcoming period of Mars.
+        Anushka's 5th Lord is also Mars and is placed in 4th House of Virat. This cancels the Manglik dosha for both of them. This placement of Mars shall give Virat a high rank, royal status and he'll continue to perform better. 7th Lord, Mercury, of Virat's Chart is placed in 10th with Sun and Jupiter in Anushka's chart. Anushka's 7th Lord, Saturn, is placed in Ascendant of Virat. This is a mixed situation and will give them their periods of trial.
         </p>
         <p>
-         The year 2019 can be a bolt from the blue for Priyanka Gandhi. So far as India’s future is concerned, it will develop by leaps and bounds as the country has been running through the auspicious Mahadasha of Moon and it will remain till September 2025. The Moon is in own sign in the Cancer that presages that India will craft the new history in the world.
+         Similarily, the placement of 8th Lord, Moon, of Virat's chart in 4th House of Anushka and 8th Lord, Saturn, of Anushka's chart in Virat's Ascendant is a mixed placement for them. Overall their relationship is a good one though just like any other relationships they would have their periods of trial particularly in the periods where Saturn and Moon are involved.
         </p>
     </div>
 </div>
