--- a/manuscript/page-2/body.html
+++ b/manuscript/page-2/body.html
@@ -48,7 +48,7 @@
             </tr>
             <tr>
                 <td>Ascendant</td>
-                <td>Sagitaarius</td>
+                <td>Sagittarius</td>
             </tr>
             <tr>
                 <td>Ascendant Lord</td>
