--- a/manuscript/page-5/body.html
+++ b/manuscript/page-5/body.html
@@ -6,14 +6,14 @@
     <div class="inner justify ">
         <h2> Synopsis </h2>
         <p>
-           People have assumed Priyanka Gandhi as a replica of Indira Gandhi. However, she has not been able to craft a prodigious career in politics during last couple of years. The Indian National Congress is in precarity under the leadership of Rahul Gandhi. 
+           Virat Kohli, the swashbuckling cricketer was born in Sagittarius ascendant. Ascendant is in the sign of Ketu which is placed in the 9th House in the Sign of Sun. Ascendant Lord, Jupiter, is retrograde in 6th House in inimical Sign of Venus, giving a high rank and the ability to fight the odds, adversaries etc. Placement of Saturn here is considered good and makes him handsome, charismatic, with never-say-die attitude.
 
         </p>
         <p>
-             The questions come to the mind of political analysts, astrologers and psephologist if Priyanka Gandhi will take over the responsibility of Indian National Congress and save dynasty politics from the debacle. Let’s explain the natal chart of Priyanka Gandhi what is in store for her political career.
+             Saturn being 3rd house lord is placed in Ascendant house and giving its aspect to courage house, opponent and career house. Rahu, an ambitious and long vision planet which has good physical stamina is placed in 3rd house of bahu bal (work done by hands). Rahu is also giving aspect to opponent, fortune house and fulfillment of desires house. Such planetary placement indicates he has strength to stand for long hours to play with complete enthusiasm.
         </p>
         <p>
-         Priyanka Gandhi is born under the expressive Gemini Ascendant and secretive Scorpio Moon sign. The Lagna Lord Mercury is conjoined with the 10<sup>th</sup> lord Jupiter along with Sun which denotes a political career. The planet Mars is posited in the 10th house that indicates she is highly capable to command the people.
+         4th Lord Jupiter is  placed in 6th House. This makes him short-tempered and aggressive, on above this placement of Mars makes him a Mangalik and adds to his temper and aggresiveness. 4th House is aspected by benefics Moon(8th Lord of intrigues, scandals), Venus (11th Lord of gains) confering him all the luxuries in life.
         </p>
     </div>
 </div>
