--- a/manuscript/page-6/body.html
+++ b/manuscript/page-6/body.html
@@ -6,14 +6,15 @@
     <div class="inner justify">
     <h2> Personal Life </h2>
         <p>
-            In Priyanka’s horoscope, the Lord of 10<sup>th</sup> House Jupiter is placed in the 7<sup>th</sup> House with the Ascendant Lord and forming a strong Rajyoga. Jupiter in its own sign in Kendra is forming Hamsa Yoga, one of the Maha-Purush yoga, which indicates that she is dynamic and spontaneous. 
+            In Virat's horoscope, 5th Lord, Mars, is placed in 4th House giving him high rank, royal status. This house is aspected by 9th Lord, Sun which is involved in Neech Bhanga Raja Yoga and which is conjunct with Mercury, 10th Lord of profession and also the 7th Lord, of public acclaim, image. Association of 5th House and 9th House is very good and shall take him to heights in life.
 </p>
               <p>
-            Saturn is going to transit in her 7<sup>th</sup> house and will transit over natal Sun, Mercury and Jupiter. It may bring some disturbances in her married life because of the lordship of the 8th bhava but her natal Saturn has lots of promises for her. Saturn is placed in star of Sun which is the ruler of third house.
+            9th Lord, Sun, placed in 11th House involved in Neech Bhanga Raja Yoga shall take him to heights and bestow name, fame, wealth etc. Ketu in 9th House also makes him haughty and aggressive. 10th Lord, Mercury, in 11th House, conjunct with 9th Lord, Sun, confers gain, name, fame in career. It has aspect of Mars(5th Lord) and Saturn (3rd Lord) indicates success in all ventures.
 
             </p>
         <p>
-            There is also a good combination for spiritualist in the horoscope of Priyanka Gandhi. In both the Rashi chart and Navamsha, the 5<sup>th</sup> lord has gone into the ninth house and is getting the aspect of ninth lord. That's why she is inclined to <em>Vipassana</em> meditation.
+            7th Lord, Mercury, is placed in 11th House, that shall bestow him a wife who comes from a well to-do family, may give multiple affairs. Aspect of both Mars and Saturn on 7th House is not good for marital, romantic matters. 12th Lord, Mars in 4th House, keeps him away from home as he is mostly on tours. This house has benefic aspect of the Ascendant Lord, Jupiter.
+
         </p>
     </div>
 </div>
