--- a/manuscript/page-12/body.html
+++ b/manuscript/page-12/body.html
@@ -1,15 +1,15 @@
 <header class="tape flex">
-    <div class="chapter flex "> Politics</div>
-    <div class="chaptername "> Career</div>
+    <div class="chapter flex "> Relationship </div>
+    <div class="chaptername "> Anushka Sharma </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
-        <h2> Political future</h2>
+        <h2> Relationship with Anushka </h2>
         <p>
-           However, there are no rays of hope as she is under the Mahadasha of Venus and Antardasha of Saturn till 12<sup>th</sup> March 2020. The Antardasha of Saturn is not in her favor as it is posited in the 12<sup>th</sup> house. Priyanka is not going to be a boon to the Congress in the coming elections by March 2020. It will be a hard nut to crack for her to save the Congress that has been sailing its broken boat on the vast sheet of oceanic water.
+           Anushka Sharma was born with Cancer Ascendant, with the Ascendant Lord, Moon placed in 4th House of home, mother, material comforts, domestic and mental peace. Ascendant Lord of Virat, Jupiter, is placed in 10th House in friendly Sign of Aries, in Anushka's chart. 2nd Lord, Saturn, of Virat's chart is placed in good Sign Sagittarius in 6th House of Anushka's chart and is also a good placement and shall help Virat perform better in competitions, overcome his enemies.
         </p>
         <p>
-            She will be running through the Antardasha of Mercury from 12<sup>th</sup> March 2020 till 12<sup>th</sup> January 2023 which will remain in her favor. However, her active presence will not make any difference due the Mahadasha of Venus is not going bring phenomenal result till 12<sup>th</sup> March 2024 as it is afflicted by Saturn and Rahu.                        
+            2nd Lord, Sun, of Anushka's chart is involved in Neech Bhanga Raja Yoga in 11th House, in Virat's chart. This is a good position of Anushka and shall give her greater gains in career, wealth etc. 5th Lord, Mars, of Virat's chart is exalted in Anushka's chart in 7th House and in Paap Kartari. This indicates some problems at the emotional front for Virat.                       
         </p>
     </div>
 </div>
