--- a/manuscript/page-9/body.html
+++ b/manuscript/page-9/body.html
@@ -1,18 +1,18 @@
 <header class="tape flex">
-    <div class="chaptername right"> Congress</div>
-    <div class="chapter flex right"> Face</div>
+    <div class="chaptername right"> Champions </div>
+    <div class="chapter flex right"> Trophy </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
-        <h2> Relationship with Congress </h2>
+        <h2> Champions Trophy 2017 </h2>
         <p>
-            She has the abilities to perform better than expected if she tries to live up to her potential. But she is choosy about people and can be stubborn at times. 
+            Champion's Trophy would be held in England from 1st June 2017 to 18th June 2017. During this time Virat will be undergoing the period Rahu/Saturn/Rahu. In Virat's horoscope, Rahu is well placed in a friendly Sign in 3rd House of courage, efforts, courageous.
         </p>
 
-            <p>Also, she resists accepting any new ideas and does not want to change her opinions easily. However, it is her strong views and intuition which generally guide her to take vital decisions and stand firm against the opposite views.
+            <p>Rahu's dispositor Saturn is also well placed in Sagittarius in Ascendant and is aspecting 3rd House giving it additional strength. Rahu from 3rd House is aspecting 9th House of fortune, luck, travels etc. Saturn is 3rd Lord of courage, efforts and 2nd Lord of prosperity, it is aspecting 7th House of gain of position, foreign relations and 10th House of career, profession.
         </p>
             <p>
-            Seventh house denotes partnerships and this is what Priyanka Gandhi has done with Samajwadi Party. She may have health related issues in the time to come but her professional career will see an upsurge for sure. She will slowly but firmly move congress up.
+             During transit retrograde Jupiter will be in 10th House and from here shall be aspecting the natal Jupiter in 6th House of competition. Transiting Saturn would have entered its natal position. This indicates a fairly successful Champions Trophy for Virat Kohli.
         </p>
     </div>
 </div>
