Added gemstone and monk's pic

--- a/manuscript/page-10/body.html
+++ b/manuscript/page-10/body.html
@@ -1,15 +1,17 @@
 <header class="tape flex">
-    <div class="chapter flex"> Cricket </div>
-    <div class="chaptername"> World Cup 2019 </div>
+ <div class="chapter flex"> World Cup </div>
+    <div class="chaptername "> 2019 </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
-        <h2> World Cup 2019 </h2>
         <p>
-            Cricket World Cup would be held in England from 30 May 2019 to 15 July 2017. During this period Virat will be undergoing the period of Rahu/Mercury/Moon followed by Rahu/Mercury/Mars. In Virat's horoscope, Rahu is well placed in friendly Sign in 3rd House of courage, efforts, courageous. Rahu's dispositor Saturn is also well placed in Sagittarius in Ascendant and is aspecting 3rd House giving it additional strength.
-        </p>
-        <p>
-           Rahu from 3rd House is aspecting 9th House of fortune, luck, travels etc. Saturn is 3rd Lord of courage, efforts and 2nd Lord of prosperity, it is aspecting 7th House of gain of position, foreign relations and 10th House of career, profession. 
-        </p>
+            Mercury is the 10th Lord placed in 11th House of gains, rise, aspecting 5th House of positivity, conjunct with the 9th Lord of fortune, luck.
+</p>
+           <p>
+Moon, is 8th Lord of suddeness, placed in 10th House conjunct with 11th Lord of gains, and 6th Lord of competition, Venus. Mars is 5th Lord of positivity, placed in 4th House and adding strength to the 10th House by aspect. 
+</p>
+<p>
+It is also the Lord of displacement, losses, foreign travels. Transit-wise this period does not look to be conducive for Virat Kohli, thus the next World Cup could be a mixed bag for India and Virat Kohli.
+</p>
     </div>
 </div>
