--- a/manuscript/page-13/body.html
+++ b/manuscript/page-13/body.html
@@ -1,14 +1,15 @@
 <header class="tape flex">
-    <div class="chaptername right"> Relationship</div>
-    <div class="chapter flex right"> Anushka </div>
+    <div class="chaptername right"> India's </div>
+    <div class="chapter flex right"> Captaincy </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
+    <h2> Virat's Captaincy </h2>
         <p>
-        Anushka's 5th Lord is also Mars and is placed in 4th House of Virat. This cancels the Manglik dosha for both of them. This placement of Mars shall give Virat a high rank, royal status and he'll continue to perform better. 7th Lord, Mercury, of Virat's Chart is placed in 10th with Sun and Jupiter in Anushka's chart. Anushka's 7th Lord, Saturn, is placed in Ascendant of Virat. This is a mixed situation and will give them their periods of trial.
+        Virat Kohli has more of an aggressive kind of personality and he likes to play in the same mode. He is not afraid to take risks which is a quality of a good captain. He has been able to maintain India at the No. 1 spot in Test Cricket. India is number 2 on the T20 rankings both of which has Kohli as Captain for sometime now. Virat has just taken over the Captaincy of ODI from Dhoni, so it will take sometime before can see the results of his Captaincy in ODIs. 
         </p>
         <p>
-         Similarily, the placement of 8th Lord, Moon, of Virat's chart in 4th House of Anushka and 8th Lord, Saturn, of Anushka's chart in Virat's Ascendant is a mixed placement for them. Overall their relationship is a good one though just like any other relationships they would have their periods of trial particularly in the periods where Saturn and Moon are involved.
+         Virat Kohli is an innovative Cricketer who is at his best when the situation is challenging due to being MANGLIK in nature and also Rahu is posited in 3rd House of courage, efforts. Also not to forget a benefic Jupiter in 6th House of competition gives him this drive to try and excel in difficult circumstances. All these characterstics of Virat Kohli bode well for Indian Cricket in all the 3 formats but he needs to reign in his aggressiveness and channelise it on the cricket field.
         </p>
     </div>
 </div>
