--- a/manuscript/page-14/body.html
+++ b/manuscript/page-14/body.html
@@ -7,10 +7,10 @@
         <h1> Recommendations: </h1>
         <p> The analysis and following tips from our community of astrologers is based on limited public data that we believe will help Mr. Virat Kohli achieve her best:</p>
         <ul>
-          <li> Recommend to wear a Emerald gem to empower planet Mercury. Weight of the gem be close to 5 carats. </li>
-          <li> Mounted on a gold base, the ring must be worn on the little finger of right hand on shukla paksha Wednesday morning after taking bath and prayers.  </li>
-          <li> Recite the mantra <em> Aum Budhaya Namaha </em> 108 times. </li>
+          <li> Recommend to wear a Yellow Sapphire gem to empower planet Jupiter. Weight of the gem be close to 5 carats. </li>
+          <li> Mounted on a gold base, the ring must be worn on the little finger of right hand on shukla paksha Thursday morning after taking bath and prayers.  </li>
+          <li> Recite the mantra <em> Aum Gurave Namaha </em> 108 times. </li>
         </ul>
-        <img class="center" src="https://raw.githubusercontent.com/kanishkrai/priyanka-gandhi/master/assets/images/emerald.png" width="50%"/>
+        <img class="center" src="https://raw.githubusercontent.com/kanishkrai/priyanka-gandhi/master/assets/images/pukhraj.png" width="50%"/>
     </div>
 </div>
