--- a/manuscript/page-5/body.html
+++ b/manuscript/page-5/body.html
@@ -10,10 +10,8 @@
 
         </p>
         <p>
-             Saturn being 3rd house lord is placed in Ascendant house and giving its aspect to courage house, opponent and career house. Rahu, an ambitious and long vision planet which has good physical stamina is placed in 3rd house of bahu bal (work done by hands). Rahu is also giving aspect to opponent, fortune house and fulfillment of desires house. Such planetary placement indicates he has strength to stand for long hours to play with complete enthusiasm.
+             Saturn being 3rd house lord is placed in Ascendant house and giving its aspect to house of courage, opponent and career. Rahu, an ambitious and long vision planet which has good physical stamina is placed in 3rd house of bahubal (work done by hands). Rahu is also giving aspect to opponent, fortune house and fulfillment of desires house. Such planetary placement indicates he has strength to stand for long hours to play with complete enthusiasm.
         </p>
-        <p>
-         4th Lord Jupiter is  placed in 6th House. This makes him short-tempered and aggressive, on above this placement of Mars makes him a Mangalik and adds to his temper and aggresiveness. 4th House is aspected by benefics Moon(8th Lord of intrigues, scandals), Venus (11th Lord of gains) confering him all the luxuries in life.
-        </p>
+       
     </div>
 </div>
