--- a/manuscript/page-8/body.html
+++ b/manuscript/page-8/body.html
@@ -1,19 +1,15 @@
 <header class="tape flex">
-    <div class="chapter flex ">Sibling</div>
-    <div class="chaptername">Relations</div>
+    <div class="chapter flex"> Champions </div>
+    <div class="chaptername"> Trophy 2017 </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
-        <h2> Relationship with Rahul </h2>
+        <h2> Champions Trophy 2017 </h2>
         <p>
-            The people might experience an altogether different theatre in the Gandhi family. There is strong feasibility of having cold war between Rahul and Priyanka due to inefficacy of the leadership by Rahul that dethroned the mighty Congress from the nook and corner of the country.
+            Champion's Trophy would be held in England from 1st June 2017 to 18th June 2017. During this time Virat will be undergoing the period Rahu/Saturn/Rahu. In Virat's horoscope, Rahu is well placed in a friendly Sign in 3rd House of courage, efforts, courageous.
         </p>
-        <p> The lord of 3<sup>rd</sup> house is Moon that rules younger sister in the Rahul’s natal chart which prognosticates difference of opinion with Priyanka. However, the moderate family feud will remain under control since the lord of third house is Sun in the Priyanka’s chart which is posited in the 7<sup>th</sup> house with auspicious Jupiter and Mercury.
-        </p>
-        <p>
-           The 3<sup>rd</sup> house in the natal chart of Priyanka Gandhi is very strong and free from malefic affliction. Moreover, the 3<sup>rd</sup> house is also getting auspicious aspect by Jupiter.
+
+            <p>Rahu's dispositor Saturn is also well placed in Sagittarius in Ascendant and is aspecting 3rd House giving it additional strength. Rahu from 3rd House is aspecting 9th House of fortune, luck, travels etc. Saturn is 3rd Lord of courage, efforts and 2nd Lord of prosperity, it is aspecting 7th House of gain of position, foreign relations and 10th House of career and profession. During transit, retrograde Jupiter will be in 10th House and from here shall be aspecting the natal Jupiter in 6th House of competition. Transiting Saturn would have entered its natal position. This indicates a fairly successful Champions Trophy for Virat Kohli.
         </p>
     </div>
 </div>
-
-
