--- a/manuscript/page-9/body.html
+++ b/manuscript/page-9/body.html
@@ -1,18 +1,15 @@
 <header class="tape flex">
-    <div class="chaptername right"> Champions </div>
-    <div class="chapter flex right"> Trophy </div>
+        <div class="chaptername right"> World Cup </div>
+    <div class="chapter flex right"> 2019 </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
-        <h2> Champions Trophy 2017 </h2>
+        <h2> World Cup 2019 </h2>
         <p>
-            Champion's Trophy would be held in England from 1st June 2017 to 18th June 2017. During this time Virat will be undergoing the period Rahu/Saturn/Rahu. In Virat's horoscope, Rahu is well placed in a friendly Sign in 3rd House of courage, efforts, courageous.
+            Cricket World Cup would be held in England from 30 May 2019 to 15 July 2017. During this period Virat will be undergoing the period of Rahu/Mercury/Moon followed by Rahu/Mercury/Mars. In Virat's horoscope, Rahu is well placed in friendly Sign in 3rd House of courage, efforts, courageous. Rahu's dispositor Saturn is also well placed in Sagittarius in Ascendant and is aspecting 3rd House giving it additional strength.
         </p>
-
-            <p>Rahu's dispositor Saturn is also well placed in Sagittarius in Ascendant and is aspecting 3rd House giving it additional strength. Rahu from 3rd House is aspecting 9th House of fortune, luck, travels etc. Saturn is 3rd Lord of courage, efforts and 2nd Lord of prosperity, it is aspecting 7th House of gain of position, foreign relations and 10th House of career, profession.
-        </p>
-            <p>
-             During transit retrograde Jupiter will be in 10th House and from here shall be aspecting the natal Jupiter in 6th House of competition. Transiting Saturn would have entered its natal position. This indicates a fairly successful Champions Trophy for Virat Kohli.
+        <p>
+           Rahu from 3rd House is aspecting 9th House of fortune, luck, travels etc. Saturn is 3rd Lord of courage, efforts and 2nd Lord of prosperity, it is aspecting 7th House of gain of position, foreign relations and 10th House of career, profession. 
         </p>
     </div>
 </div>
