Edited a line on page 15

--- a/manuscript/page-15/body.html
+++ b/manuscript/page-15/body.html
@@ -7,7 +7,7 @@
         <div class="flex">
           <span class="bio left">
             <p>
-              Mr. Ashish Aggarwal is well known for her ability to explain astrology in simple yet descriptive manner.
+              Mr. Ashish Aggarwal is well known for his ability to explain astrology in simple yet descriptive manner.
             </p>
             <p>
               As an astrologer with a modern outlook Mr. Aggarwal has over 2 years of experience in Parashari astrology.
