Simpler sentence for Kohli

--- a/manuscript/page-11/body.html
+++ b/manuscript/page-11/body.html
@@ -1,16 +1,19 @@
+
 <header class="tape flex">
-    <div class="chaptername right"> Relationship</div>
-    <div class="chapter flex right"> Anushka </div>
+ <div class="chaptername right"> World Cup </div>
+    <div class="chapter flex right "> 2019 </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
-        <h2> Relationship with Anushka </h2>
+  <h2> World Cup 2019 </h2>
         <p>
-           Anushka Sharma was born with Cancer Ascendant, with the Ascendant Lord, Moon placed in 4th House of home, mother, material comforts, domestic and mental peace. Ascendant Lord of Virat, Jupiter, is placed in 10th House in friendly Sign of Aries, in Anushka's chart. 2nd Lord, Saturn, of Virat's chart is placed in good Sign Sagittarius in 6th House of Anushka's chart and is also a good placement and shall help Virat perform better in competitions, overcome his enemies.
+        Cricket World Cup would be held in England from 30<sup>th</sup> May 2019 to 15<sup>th</sup> July 2017. During this period, Virat will be undergoing the period of Rahu mahadasha and Mercury antardasha. Mercury is the 10th Lord placed in 11th House of gains, rise, aspecting 5th House of positivity, conjunct with the 9th Lord of fortune, luck.
         </p>
         <p>
-            2nd Lord, Sun, of Anushka's chart is involved in Neech Bhanga Raja Yoga in 11th House, in Virat's chart. This is a good position of Anushka and shall give her greater gains in career, wealth etc. 5th Lord, Mars, of Virat's chart is exalted in Anushka's chart in 7th House and in Paap Kartari. This indicates some problems at the emotional front for Virat.                       
+        Moon, is 8th Lord of suddeness, placed in 10th House conjunct with 11th Lord of gains, and 6th Lord of competition, Venus. Mars is 5th Lord of positivity, placed in 4th House and adding strength to the 10th House by aspect. 
         </p>
+        <p>
+        It is also the Lord of displacement, losses, foreign travels. Transit-wise this period does not look to be conducive for Virat Kohli, thus the next World Cup could be a mixed bag for India and Virat Kohli. </p>
     </div>
 </div>
 
