--- a/manuscript/page-12/body.html
+++ b/manuscript/page-12/body.html
@@ -1,14 +1,16 @@
 <header class="tape flex">
-     <div class="chapter flex "> Relationship </div>
-    <div class="chaptername "> Anushka Sharma </div>
+    <div class="chapter flex"> Relationship</div>
+    <div class="chaptername"> Anushka </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
+        <h2> Relationship with Anushka </h2>
         <p>
-        Anushka's 5th Lord is also Mars and is placed in 4th House of Virat. This cancels the Manglik dosha for both of them. This placement of Mars shall give Virat a high rank, royal status and he'll continue to perform better. 7th Lord, Mercury, of Virat's Chart is placed in 10th with Sun and Jupiter in Anushka's chart. Anushka's 7th Lord, Saturn, is placed in Ascendant of Virat. This is a mixed situation and will give them their periods of trial.
-        </p>
+           Anushka Sharma was born with Cancer Ascendant, with the Ascendant Lord, Moon placed in 4th House of home, mother, material comforts, domestic and mental peace. Ascendant Lord of Virat, Jupiter, is placed in 10th House in friendly Sign of Aries, in Anushka's chart.      
+         </p>
         <p>
-         Similarily, the placement of 8th Lord, Moon, of Virat's chart in 4th House of Anushka and 8th Lord, Saturn, of Anushka's chart in Virat's Ascendant is a mixed placement for them. Overall their relationship is a good one though just like any other relationships they would have some sort of turbulence.
+            2nd Lord, Sun, of Anushka's chart is involved in Neech Bhanga Raja Yoga in 11th House, in Virat's chart. This is a good position of Anushka and shall give her greater gains in career, wealth etc. 5th Lord, Mars, of Virat's chart is exalted in Anushka's chart in 7th House. This indicates some problems at the emotional front for Virat.                       
         </p>
     </div>
 </div>
+
