--- a/manuscript/page-13/body.html
+++ b/manuscript/page-13/body.html
@@ -1,15 +1,14 @@
 <header class="tape flex">
-    <div class="chaptername right"> India's </div>
-    <div class="chapter flex right"> Captaincy </div>
+     <div class="chaptername right "> Relationship </div>
+    <div class="chapter flex right "> Anushka Sharma </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
-    <h2> Virat's Captaincy </h2>
         <p>
-        Virat Kohli has more of an aggressive kind of personality and he likes to play in the same mode. He is not afraid to take risks which is a quality of a good captain. He has been able to maintain India at the No. 1 spot in Test Cricket. India is number 2 on the T20 rankings both of which has Kohli as Captain for sometime now. Virat has just taken over the Captaincy of ODI from Dhoni, so it will take sometime before can see the results of his Captaincy in ODIs. 
+        Anushka's 5th Lord is also Mars and is placed in 4th House of Virat. This cancels the Manglik dosha for both of them. This makes their marriage preferable. They will be adventurous, outgoing and social. Virat will support Anushka by all means and will be loyal to her. She will also give full support to him in form of knowledge, skills, ideas and intelligence. They will have lots of things in common and enjoy the company of each other. They will be supportive, loving, and caring.
         </p>
         <p>
-         Virat Kohli is an innovative Cricketer who is at his best when the situation is challenging due to being MANGLIK in nature and also Rahu is posited in 3rd House of courage, efforts. Also not to forget a benefic Jupiter in 6th House of competition gives him this drive to try and excel in difficult circumstances. All these characterstics of Virat Kohli bode well for Indian Cricket in all the 3 formats but he needs to reign in his aggressiveness and channelise it on the cricket field.
+         However, they have Bhakoot Dosha, which determines love compatibility. There will be disagreements between them related to family and financial matters. Overall their relationship is a good one though, just like any other relationships they would have some sort of ebbs and flows.
         </p>
     </div>
 </div>
