--- a/manuscript/page-14/body.html
+++ b/manuscript/page-14/body.html
@@ -5,7 +5,7 @@
 <div class="leaf flex">
     <div class="inner justify ">
         <h1> Recommendations: </h1>
-        <p> The analysis and following tips from our community of astrologers is based on limited public data that we believe will help Mr. Virat Kohli achieve her best:</p>
+        <p> The analysis and following tips from our community of astrologers is based on limited public data that we believe will help Mr. Virat Kohli achieve his best:</p>
         <ul>
           <li> Recommend to wear a Yellow Sapphire gem to empower planet Jupiter. Weight of the gem be close to 5 carats. </li>
           <li> Mounted on a gold base, the ring must be worn on the little finger of right hand on shukla paksha Thursday morning after taking bath and prayers.  </li>
