--- a/manuscript/page-5/body.html
+++ b/manuscript/page-5/body.html
@@ -6,7 +6,7 @@
     <div class="inner justify ">
         <h2> Synopsis </h2>
         <p>
-           Virat Kohli, the swashbuckling cricketer was born in Sagittarius ascendant. Ascendant is in the sign of Ketu which is placed in the 9th House in the Sign of Sun. Ascendant Lord, Jupiter, is retrograde in 6th House in inimical Sign of Venus, giving a high rank and the ability to fight the odds, adversaries etc. Placement of Saturn here is considered good and makes him handsome, charismatic, with never-say-die attitude.
+           Virat Kohli, the swashbuckling cricketer was born in Sagittarius ascendant. Ascendant Lord, Jupiter is retrograde in 6th House in the inimical Sign of Venus, giving a high rank and the ability to fight the odds and adversaries. Placement of Saturn makes him handsome, charismatic, with never-say-never attitude.
 
         </p>
         <p>
