--- a/manuscript/page-6/body.html
+++ b/manuscript/page-6/body.html
@@ -6,10 +6,10 @@
     <div class="inner justify">
     <h2> Personal Life </h2>
         <p>
-            In Virat's horoscope, 5th Lord, Mars, is placed in 4th House giving him high rank, royal status. This house is aspected by 9th Lord, Sun which is involved in Neech Bhanga Raja Yoga and which is conjunct with Mercury, which is the 10th Lord of profession and also the 7th Lord of public acclaim, image. Association of 5th House and 9th House is very good and shall take him to heights in life.
+            In Virat's horoscope, Mars, is placed in 4th House giving him high rank, royal status. This house is aspected by 9th Lord, Sun in conjunct with Mercury, which is the 10th Lord of profession and also the 7th Lord of public acclaim, image. Association of 5th House and 9th House is very good and shall take him to greater heights in life.
 </p>
               <p>
-         4th Lord Jupiter is placed in 6th House. This makes him short-tempered and aggressive, on above this placement of Mars makes him a Mangalik and adds to his temper and aggresiveness.
+         4th Lord Jupiter is placed in 6th House. This makes him short-tempered and aggressive. On above this, placement of Mars makes him a Mangalik and adds to his temper and aggresiveness.
         </p>
         <p>
             7th Lord, Mercury, is placed in 11th House, that shall bestow him a wife who comes from a well to-do family. Aspect of both Mars and Saturn on 7th House is not good for marital, romantic matters. 12th Lord, Mars in 4th House, keeps him away from home as he is mostly on tours.
