--- a/manuscript/page-7/body.html
+++ b/manuscript/page-7/body.html
@@ -6,7 +6,7 @@
          <div class="center">
             <img src="https://raw.githubusercontent.com/kanishkrai/virat-kohli/master/assets/images/d9chart.png" width="75%" />
             <h4> D9 <em>Navmansa</em> (Destiny) chart</h4>
-         <blockquote>…futuristic outlook and focus</blockquote>
+         <blockquote>What's in his store? </blockquote>
          </div>
     </div>
 </div>
