--- a/manuscript/page-8/body.html
+++ b/manuscript/page-8/body.html
@@ -1,15 +1,15 @@
 <header class="tape flex">
-    <div class="chapter flex"> Champions </div>
-    <div class="chaptername"> Trophy 2017 </div>
+    <div class="chapter flex"> India's </div>
+    <div class="chaptername"> Captaincy </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
-        <h2> Champions Trophy 2017 </h2>
+    <h2> Virat's Captaincy </h2>
         <p>
-            Champion's Trophy would be held in England from 1st June 2017 to 18th June 2017. During this time Virat will be undergoing the period Rahu/Saturn/Rahu. In Virat's horoscope, Rahu is well placed in a friendly Sign in 3rd House of courage, efforts, courageous.
+        Virat Kohli has more of an aggressive kind of personality and he likes to play in the same mode. He is not afraid to take risks which is a quality of a good captain. He has been able to maintain India at the No. 1 spot in Test Cricket. India is number 2 on the T20 rankings both of which has Kohli as Captain for sometime now.
         </p>
-
-            <p>Rahu's dispositor Saturn is also well placed in Sagittarius in Ascendant and is aspecting 3rd House giving it additional strength. Rahu from 3rd House is aspecting 9th House of fortune, luck, travels etc. Saturn is 3rd Lord of courage, efforts and 2nd Lord of prosperity, it is aspecting 7th House of gain of position, foreign relations and 10th House of career and profession. During transit, retrograde Jupiter will be in 10th House and from here shall be aspecting the natal Jupiter in 6th House of competition. Transiting Saturn would have entered its natal position. This indicates a fairly successful Champions Trophy for Virat Kohli.
+        <p>
+         Virat Kohli is an innovative Cricketer who is at his best when the situation is challenging due to being MANGLIK in nature and also Rahu is posited in 3rd House of courage, efforts. Also not to forget a benefic Jupiter in 6th House of competition gives him this drive to try and excel in difficult circumstances. All these characterstics of Virat Kohli bode well for Indian Cricket in all the 3 formats but he needs to reign in his aggressiveness and channelise it on the cricket field.
         </p>
     </div>
 </div>
