--- a/manuscript/page-10/body.html
+++ b/manuscript/page-10/body.html
@@ -1,17 +1,18 @@
 <header class="tape flex">
- <div class="chapter flex"> World Cup </div>
-    <div class="chaptername "> 2019 </div>
+    <div class="chapter flex"> Champions </div>
+    <div class="chaptername"> Trophy 2017 </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
+        <h2> Champions Trophy 2017 </h2>
         <p>
-            Mercury is the 10th Lord placed in 11th House of gains, rise, aspecting 5th House of positivity, conjunct with the 9th Lord of fortune, luck.
-</p>
-           <p>
-Moon, is 8th Lord of suddeness, placed in 10th House conjunct with 11th Lord of gains, and 6th Lord of competition, Venus. Mars is 5th Lord of positivity, placed in 4th House and adding strength to the 10th House by aspect. 
-</p>
-<p>
-It is also the Lord of displacement, losses, foreign travels. Transit-wise this period does not look to be conducive for Virat Kohli, thus the next World Cup could be a mixed bag for India and Virat Kohli.
-</p>
+            Champion's Trophy would be held in England from 1st June 2017 to 18th June 2017. During this time Virat will be undergoing the period of Rahu mahadasha and Saturn antardasha.
+        </p>
+
+            <p>Rahu from 3rd House is aspecting 9th House of fortune, luck, travels etc. Saturn is 3rd Lord of courage, efforts and 2nd Lord of prosperity, it is aspecting 7th House of gain of position, foreign relations and 10th House of career and profession. </p>
+
+            <p>During Saturn's transit, retrograde Jupiter will be in 10th House and from here shall be aspecting the natal Jupiter in 6th House of competition. This indicates a fairly successful Champions Trophy for Virat Kohli.
+        </p>
     </div>
 </div>
+
