--- a/manuscript/page-9/body.html
+++ b/manuscript/page-9/body.html
@@ -1,15 +1,18 @@
 <header class="tape flex">
-        <div class="chaptername right"> World Cup </div>
-    <div class="chapter flex right"> 2019 </div>
+    <div class="chaptername right"> Summary </div>
+    <div class="chapter flex right"> 2017 </div>
 </header>
 <div class="leaf flex">
     <div class="inner justify ">
-        <h2> World Cup 2019 </h2>
+        <h2> 2017 In A Nutshell </h2>
         <p>
-            Cricket World Cup would be held in England from 30 May 2019 to 15 July 2017. During this period Virat will be undergoing the period of Rahu/Mercury/Moon followed by Rahu/Mercury/Mars. In Virat's horoscope, Rahu is well placed in friendly Sign in 3rd House of courage, efforts, courageous. Rahu's dispositor Saturn is also well placed in Sagittarius in Ascendant and is aspecting 3rd House giving it additional strength.
+            With the dominant performance in the year 2016 by scoring back to back four double-centuries in four test series, year 2017 wasn't started on such a high note. Due to weak transit of Saturn in Sagittarius during Feb-Mar time frame, the results were unsatisfactory.
         </p>
-        <p>
-           Rahu from 3rd House is aspecting 9th House of fortune, luck, travels etc. Saturn is 3rd Lord of courage, efforts and 2nd Lord of prosperity, it is aspecting 7th House of gain of position, foreign relations and 10th House of career, profession. 
+
+            <p>His shoulder injury increased his woes in terms of career and health. By Apr-May 2017, he would restratigize his performance. As Saturn would be retrograde, therefore affecting his IPL T-20 performance for Royal Challengers Bengaluru.</p>
+
+            <p>Till July 2017, there could be great pressure of performance and coordinating Indian cricket team. By Aug-Dec 2017, Saturn would pick up its pace and Virat will revive his form with a bang.
         </p>
     </div>
 </div>
+
